docs: update optimalizace